--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-aria": "^3.22.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "react-select": "^5.7.0",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
   },
