--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "react-select": "^5.7.0",
+    "react-tabs": "^6.0.0",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
   },
