--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-  "name": "hosting",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@loadable/component": "^5.15.3",
-    "@next/font": "13.1.6",
-    "@nextui-org/react": "^1.0.0-beta.12",
-    "@types/node": "18.14.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "axios": "^1.3.4",
-    "clsx": "^1.2.1",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
-    "framer-motion": "^10.0.1",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-aria": "^3.22.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "react-query": "^3.39.3",
-    "react-select": "^5.7.0",
-    "react-tabs": "^6.0.0",
-    "sass": "^1.58.3",
-    "typescript": "4.9.5"
-  },
-  "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/loadable__component": "^5.13.4",
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.19.0",
-    "eslint-config-next": "^13.1.6",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.4"
-  }
+	"name": "hosting",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@loadable/component": "^5.15.3",
+		"@next/font": "13.1.6",
+		"@nextui-org/react": "^1.0.0-beta.12",
+		"@reduxjs/toolkit": "^1.9.3",
+		"@types/node": "18.14.0",
+		"@types/react": "18.0.28",
+		"@types/react-dom": "18.0.11",
+		"axios": "^1.3.4",
+		"clsx": "^1.2.1",
+		"eslint": "8.34.0",
+		"eslint-config-next": "13.1.6",
+		"framer-motion": "^10.0.1",
+		"next": "13.1.6",
+		"react": "18.2.0",
+		"react-aria": "^3.22.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.7.1",
+		"react-query": "^3.39.3",
+		"react-redux": "^8.0.5",
+		"react-select": "^5.7.0",
+		"react-tabs": "^6.0.0",
+		"sass": "^1.58.3",
+		"typescript": "4.9.5"
+	},
+	"devDependencies": {
+		"@trivago/prettier-plugin-sort-imports": "^3.2.0",
+		"@types/loadable__component": "^5.13.4",
+		"@types/node": "18.0.0",
+		"@types/react": "18.0.14",
+		"@types/react-dom": "18.0.5",
+		"autoprefixer": "^10.4.7",
+		"eslint": "8.19.0",
+		"eslint-config-next": "^13.1.6",
+		"postcss": "^8.4.14",
+		"prettier": "^2.7.1",
+		"tailwindcss": "^3.1.4"
+	}
 }
