--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
 REACT_APP_URL = http://localhost:3000
-REACT_APP_SERVER_URL = http://localhost:5500
-REACT_APP_ENV = production
-REACT_API_CURSE_FORGE_URL = https://api.curseforge.com
-REACT_API_CURSE_FORGE_KEY = $2a$10$dxU8VD6turngMqT30zZNue.LoGtogy3o9FK4.ewYX/gJfTikizCK6
+REACT_APP_SERVER_URL = http://localhost:9000
+REACT_APP_ENV = development
