--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@nextui-org/react": "^1.0.0-beta.12",
 		"@reduxjs/toolkit": "^1.9.3",
 		"@types/node": "18.14.0",
+		"@types/numeral": "^2.0.2",
 		"@types/react": "18.0.28",
 		"@types/react-dom": "18.0.11",
 		"axios": "^1.3.4",
@@ -23,6 +24,7 @@
 		"framer-motion": "^10.0.1",
 		"html-react-parser": "^3.0.14",
 		"next": "13.1.6",
+		"numeral": "^2.0.6",
 		"react": "18.2.0",
 		"react-aria": "^3.22.0",
 		"react-dom": "18.2.0",
@@ -32,6 +34,7 @@
 		"react-select": "^5.7.0",
 		"react-tabs": "^6.0.0",
 		"sass": "^1.58.3",
+		"swr": "^2.1.1",
 		"typescript": "4.9.5"
 	},
 	"devDependencies": {
