--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react-aria": "^3.22.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.7.1",
+		"react-loading-skeleton": "^3.2.0",
 		"react-query": "^3.39.3",
 		"react-redux": "^8.0.5",
 		"react-select": "^5.7.0",
