--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/numeral": "^2.0.2",
 		"@types/react": "18.0.28",
 		"@types/react-dom": "18.0.11",
+		"@types/react-redux-toastr": "^7.6.2",
 		"axios": "^1.3.4",
 		"clsx": "^1.2.1",
 		"eslint": "8.34.0",
@@ -28,10 +29,12 @@
 		"react": "18.2.0",
 		"react-aria": "^3.22.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.43.9",
 		"react-icons": "^4.7.1",
 		"react-loading-skeleton": "^3.2.0",
 		"react-query": "^3.39.3",
 		"react-redux": "^8.0.5",
+		"react-redux-toastr": "^7.6.11",
 		"react-select": "^5.7.0",
 		"react-tabs": "^6.0.0",
 		"sass": "^1.58.3",
@@ -39,6 +42,7 @@
 		"typescript": "4.9.5"
 	},
 	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.3",
 		"@trivago/prettier-plugin-sort-imports": "^3.2.0",
 		"@types/loadable__component": "^5.13.4",
 		"@types/node": "18.0.0",
