--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
 		"@types/numeral": "^2.0.2",
 		"@types/react": "18.0.28",
 		"@types/react-dom": "18.0.11",
-		"@types/react-redux-toastr": "^7.6.2",
 		"axios": "^1.3.4",
 		"clsx": "^1.2.1",
 		"eslint": "8.34.0",
 		"eslint-config-next": "13.1.6",
 		"framer-motion": "^10.0.1",
 		"html-react-parser": "^3.0.14",
+		"js-cookie": "^3.0.5",
 		"next": "13.1.6",
 		"numeral": "^2.0.6",
 		"react": "18.2.0",
@@ -34,9 +34,9 @@
 		"react-loading-skeleton": "^3.2.0",
 		"react-query": "^3.39.3",
 		"react-redux": "^8.0.5",
-		"react-redux-toastr": "^7.6.11",
 		"react-select": "^5.7.0",
 		"react-tabs": "^6.0.0",
+		"react-toastify": "^9.1.2",
 		"sass": "^1.58.3",
 		"swr": "^2.1.1",
 		"typescript": "4.9.5"
@@ -44,6 +44,7 @@
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.3",
 		"@trivago/prettier-plugin-sort-imports": "^3.2.0",
+		"@types/js-cookie": "^3.0.3",
 		"@types/loadable__component": "^5.13.4",
 		"@types/node": "18.0.0",
 		"@types/react": "18.0.14",
