--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.43.9",
 		"react-icons": "^4.7.1",
+		"react-joyride": "^2.5.4",
 		"react-loading-skeleton": "^3.2.0",
 		"react-query": "^3.39.3",
 		"react-redux": "^8.0.5",
