--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
 	"name": "hosting",
 	"version": "0.1.0",
 	"private": true,
@@ -10,27 +10,35 @@
 		"export": "next export"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.3.1",
 		"@loadable/component": "^5.15.3",
 		"@next/font": "13.1.6",
-		"@nextui-org/react": "^1.0.0-beta.12",
+		"@radix-ui/react-alert-dialog": "^1.0.4",
+		"@radix-ui/react-checkbox": "^1.0.4",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-select": "^1.2.2",
+		"@radix-ui/react-slider": "^1.1.2",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-switch": "^1.0.3",
 		"@reduxjs/toolkit": "^1.9.3",
 		"@types/node": "18.14.0",
 		"@types/numeral": "^2.0.2",
 		"@types/react": "18.0.28",
 		"@types/react-dom": "18.0.11",
 		"axios": "^1.3.4",
+		"class-variance-authority": "^0.7.0",
 		"clsx": "^1.2.1",
 		"eslint": "8.34.0",
-		"eslint-config-next": "13.1.6",
 		"framer-motion": "^10.0.1",
 		"html-react-parser": "^3.0.14",
 		"js-cookie": "^3.0.5",
-		"next": "13.1.6",
+		"lucide-react": "^0.276.0",
+		"next": "^13.4.19",
 		"numeral": "^2.0.6",
-		"react": "18.2.0",
+		"react": "^18.2.0",
 		"react-aria": "^3.22.0",
-		"react-dom": "18.2.0",
-		"react-hook-form": "^7.43.9",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.46.1",
 		"react-icons": "^4.7.1",
 		"react-joyride": "^2.5.4",
 		"react-loading-skeleton": "^3.2.0",
@@ -40,8 +48,10 @@
 		"react-tabs": "^6.0.0",
 		"react-toastify": "^9.1.2",
 		"sass": "^1.58.3",
-		"swr": "^2.1.1",
-		"typescript": "4.9.5"
+		"tailwind-merge": "^1.14.0",
+		"tailwindcss-animate": "^1.0.7",
+		"typescript": "4.9.5",
+		"zod": "^3.22.2"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.3",
@@ -53,7 +63,7 @@
 		"@types/react-dom": "18.0.5",
 		"autoprefixer": "^10.4.7",
 		"eslint": "8.19.0",
-		"eslint-config-next": "^13.1.6",
+		"eslint-config-next": "^13.4.19",
 		"postcss": "^8.4.14",
 		"prettier": "^2.7.1",
 		"tailwindcss": "^3.1.4"
