--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
 		"isolatedModules": true,
 		"jsx": "preserve",
 		"incremental": true,
-		"baseUrl": "./src/",
+		"baseUrl": "./src-fsd/",
 		"paths": {
 			"@/components/*": ["components/*"],
 			"@/ui/*": ["ui/*"],
