--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@radix-ui/react-slider": "^1.1.2",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-switch": "^1.0.3",
+		"@radix-ui/react-tabs": "^1.0.4",
 		"@reduxjs/toolkit": "^1.9.3",
 		"@types/node": "18.14.0",
 		"@types/numeral": "^2.0.2",
@@ -32,20 +33,17 @@
 		"framer-motion": "^10.0.1",
 		"html-react-parser": "^3.0.14",
 		"js-cookie": "^3.0.5",
-		"lucide-react": "^0.276.0",
 		"next": "^13.4.19",
 		"numeral": "^2.0.6",
 		"react": "^18.2.0",
 		"react-aria": "^3.22.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.46.1",
-		"react-icons": "^4.7.1",
+		"react-icons": "^4.11.0",
 		"react-joyride": "^2.5.4",
 		"react-loading-skeleton": "^3.2.0",
 		"react-query": "^3.39.3",
 		"react-redux": "^8.0.5",
-		"react-select": "^5.7.0",
-		"react-tabs": "^6.0.0",
 		"react-toastify": "^9.1.2",
 		"sass": "^1.58.3",
 		"tailwind-merge": "^1.14.0",
@@ -55,15 +53,17 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.3",
-		"@trivago/prettier-plugin-sort-imports": "^3.2.0",
+		"@trivago/prettier-plugin-sort-imports": "^4.2.0",
 		"@types/js-cookie": "^3.0.3",
 		"@types/loadable__component": "^5.13.4",
 		"@types/node": "18.0.0",
 		"@types/react": "18.0.14",
 		"@types/react-dom": "18.0.5",
 		"autoprefixer": "^10.4.7",
+		"babel-eslint": "^10.1.0",
 		"eslint": "8.19.0",
 		"eslint-config-next": "^13.4.19",
+		"eslint-plugin-import": "^2.28.1",
 		"postcss": "^8.4.14",
 		"prettier": "^2.7.1",
 		"tailwindcss": "^3.1.4"
