--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@radix-ui/react-checkbox": "^1.0.4",
 		"@radix-ui/react-dialog": "^1.0.4",
 		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-progress": "^1.0.3",
 		"@radix-ui/react-select": "^1.2.2",
 		"@radix-ui/react-slider": "^1.1.2",
 		"@radix-ui/react-slot": "^1.0.2",
@@ -34,6 +35,7 @@
 		"html-react-parser": "^3.0.14",
 		"js-cookie": "^3.0.5",
 		"next": "^13.4.19",
+		"next-themes": "^0.2.1",
 		"numeral": "^2.0.6",
 		"react": "^18.2.0",
 		"react-aria": "^3.22.0",
