start refactoring mods pages

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-REACT_APP_URL = http://localhost:3000
-REACT_APP_SERVER_URL = http://62.84.124.112
-REACT_APP_ENV = development
+APP_URL = http://localhost:3000
+SERVER_URL = http://localhost:9000
+NEXT_PUBLIC_SERVER_URL = http://localhost:9000
+APP_ENV = development
