--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"axios": "^1.3.4",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^1.2.1",
+		"effector": "^22.8.6",
+		"effector-react": "^22.5.4",
 		"framer-motion": "^10.0.1",
 		"html-react-parser": "^3.0.14",
 		"js-cookie": "^3.0.5",
@@ -53,9 +55,9 @@
 		"@types/js-cookie": "^3.0.3",
 		"@types/loadable__component": "^5.13.4",
 		"@types/node": "18.14.0",
+		"@types/numeral": "^2.0.2",
 		"@types/react": "18.0.28",
 		"@types/react-dom": "18.0.11",
-		"@types/numeral": "^2.0.2",
 		"autoprefixer": "^10.4.15",
 		"babel-eslint": "^10.1.0",
 		"eslint": "8.34.0",
