start refactor mod layout + mod description page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
-  "extends": "next",
-  "rules": {
-    "prefer-arrow-callback": "error",
-  }
+	"extends": "next",
+	"rules": {
+		"prefer-arrow-callback": "error"
+	}
 }
