--- a/package.json
+++ b/package.json
@@ -1,70 +1,69 @@
 {
-	"name": "hosting",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"export": "next export"
-	},
-	"dependencies": {
-		"@hookform/resolvers": "^3.3.1",
-		"@loadable/component": "^5.15.3",
-		"@radix-ui/react-alert-dialog": "^1.0.4",
-		"@radix-ui/react-checkbox": "^1.0.4",
-		"@radix-ui/react-dialog": "^1.0.4",
-		"@radix-ui/react-label": "^2.0.2",
-		"@radix-ui/react-progress": "^1.0.3",
-		"@radix-ui/react-select": "^1.2.2",
-		"@radix-ui/react-slider": "^1.1.2",
-		"@radix-ui/react-slot": "^1.0.2",
-		"@radix-ui/react-switch": "^1.0.3",
-		"@radix-ui/react-tabs": "^1.0.4",
-		"axios": "^1.3.4",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^1.2.1",
-		"effector": "^22.8.6",
-		"effector-react": "^22.5.4",
-		"framer-motion": "^10.0.1",
-		"html-react-parser": "^3.0.14",
-		"js-cookie": "^3.0.5",
-		"next": "^13.5.2",
-		"next-themes": "^0.2.1",
-		"numeral": "^2.0.6",
-		"react": "^18.2.0",
-		"react-aria": "^3.22.0",
-		"react-dom": "^18.2.0",
-		"react-hook-form": "^7.46.1",
-		"react-icons": "^4.11.0",
-		"react-joyride": "^2.5.4",
-		"react-query": "^3.39.3",
-		"react-toastify": "^9.1.2",
-		"sass": "^1.66.1",
-		"tailwind-merge": "^1.14.0",
-		"tailwindcss": "^3.3.3",
-		"tailwindcss-animate": "^1.0.7",
-		"typescript": "4.9.5",
-		"zod": "^3.22.2"
-	},
-	"devDependencies": {
-		"@tailwindcss/forms": "^0.5.3",
-		"@trivago/prettier-plugin-sort-imports": "^4.2.0",
-		"@types/js-cookie": "^3.0.3",
-		"@types/loadable__component": "^5.13.4",
-		"@types/node": "18.14.0",
-		"@types/numeral": "^2.0.2",
-		"@types/react": "18.0.28",
-		"@types/react-dom": "18.0.11",
-		"autoprefixer": "^10.4.15",
-		"babel-eslint": "^10.1.0",
-		"eslint": "8.34.0",
-		"eslint-config-next": "^13.5.2",
-		"eslint-plugin-import": "^2.28.1",
-		"jsdoc": "^4.0.2",
-		"postcss": "^8.4.29",
-		"prettier": "^2.7.1",
-		"typescript-plugin-css-modules": "^5.0.1"
-	}
+  "name": "hosting",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "export": "next export"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "axios": "^1.3.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^1.2.1",
+    "effector": "^22.8.6",
+    "effector-react": "^22.5.4",
+    "framer-motion": "^10.0.1",
+    "html-react-parser": "^3.0.14",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.279.0",
+    "next": "^13.5.2",
+    "next-themes": "^0.2.1",
+    "numeral": "^2.0.6",
+    "react": "^18.2.0",
+    "react-aria": "^3.22.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
+    "react-joyride": "^2.5.4",
+    "react-query": "^3.39.3",
+    "react-toastify": "^9.1.2",
+    "sass": "^1.66.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "4.9.5",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/js-cookie": "^3.0.3",
+    "@types/loadable__component": "^5.13.4",
+    "@types/node": "18.14.0",
+    "@types/numeral": "^2.0.2",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "autoprefixer": "^10.4.15",
+    "babel-eslint": "^10.1.0",
+    "eslint": "8.34.0",
+    "eslint-config-next": "^13.5.2",
+    "eslint-plugin-import": "^2.28.1",
+    "jsdoc": "^4.0.2",
+    "postcss": "^8.4.29",
+    "prettier": "^2.7.1",
+    "typescript-plugin-css-modules": "^5.0.1"
+  }
 }
