--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,6 @@
 			}
 		]
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/entities/mod/ui/card/index.ts"],
 	"exclude": ["node_modules"]
 }
