refactor to tanstack-query, add es-lint rule, need npm install

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@tanstack/react-query": "^4.35.3",
     "axios": "^1.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
@@ -28,6 +29,7 @@
     "effector-react": "^22.5.4",
     "framer-motion": "^10.0.1",
     "html-react-parser": "^3.0.14",
+    "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.279.0",
     "next": "^13.5.2",
@@ -38,7 +40,6 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-joyride": "^2.5.4",
-    "react-query": "^3.39.3",
     "react-toastify": "^9.1.2",
     "sass": "^1.66.1",
     "tailwind-merge": "^1.14.0",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/eslint-plugin-query": "^4.34.1",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/js-cookie": "^3.0.3",
     "@types/loadable__component": "^5.13.4",
