--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,9 @@
 {
-	"extends": "next",
+	"plugins": ["@tanstack/query"],
+	"extends": ["next"],
 	"rules": {
-		"prefer-arrow-callback": "error"
+		"prefer-arrow-callback": "error",
+		"@tanstack/query/exhaustive-deps": "error",
+		"@tanstack/query/prefer-query-object-syntax": "error"
 	}
 }
