--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.279.0",
     "next": "^13.5.2",
+    "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
