--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export"
+    "export": "next export",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -55,6 +57,15 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.4.5",
+    "@storybook/addon-interactions": "^7.4.5",
+    "@storybook/addon-links": "^7.4.5",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-styling": "^1.3.7",
+    "@storybook/blocks": "^7.4.5",
+    "@storybook/nextjs": "^7.4.5",
+    "@storybook/react": "^7.4.5",
+    "@storybook/testing-library": "^0.2.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/eslint-plugin-query": "^4.34.1",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
@@ -72,6 +83,7 @@
     "jsdoc": "^4.0.2",
     "postcss": "^8.4.29",
     "prettier": "^2.7.1",
+    "storybook": "^7.4.5",
     "typescript-plugin-css-modules": "^5.0.1"
   }
 }
