--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "export": "next export",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_1f64ea8eaf6bc40"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -77,6 +78,7 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.15",
     "babel-eslint": "^10.1.0",
+    "chromatic": "^7.2.0",
     "eslint": "8.34.0",
     "eslint-config-next": "^13.5.2",
     "eslint-plugin-import": "^2.28.1",
@@ -85,5 +87,7 @@
     "prettier": "^2.7.1",
     "storybook": "^7.4.5",
     "typescript-plugin-css-modules": "^5.0.1"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "hosting@0.1.0"
 }
