--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 APP_URL=http://localhost:3000
-SERVER_URL=http://62.84.124.112
-APP_ENV=production
+SERVER_URL=http://5.35.10.121:9000
+NEXT_PUBLIC_SERVER_URL=http://5.35.10.121:9000
+NEXT_PUBLIC_AUTH_TOKEN_COOKIE_KEY='AUTH_TOKEN'
+APP_ENV=development
