--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"effector": "^22.8.6",
 		"effector-react": "^22.5.4",
 		"framer-motion": "^10.0.1",
+		"highlight.js": "^11.9.0",
 		"html-react-parser": "^3.0.14",
 		"i": "^0.3.7",
 		"js-cookie": "^3.0.5",
